<resources>
    <string name="app_name">Futebol</string>
    <string name="item_time">Time</string>
    <string name="item_jogador">Jogador</string>

    <string name="btn_insert">Inserir</string>
    <string name="btn_update">Atualizar</string>
    <string name="btn_delete">Excluir</string>
    <string name="btn_findOne">Buscar</string>
    <string name="btn_findAll">Listar</string>

    <string name="titulo_time">Área do time</string>
    <string name="codigo_time">Código</string>
    <string name="cidade_time">Cidade</string>
    <string name="nome_time">Nome do time</string>

    <string name="titulo_Jogador">Área do Jogador</string>
    <string name="id_jogador">ID jogador</string>
    <string name="nascimento_jogador">Data de Nascimento</string>
    <string name="nome_jogador">Nome do Jogador</string>
    <string name="altura_jogador">Altura</string>
    <string name="peso_jogador">Peso</string>
    <string name="time_jogador">Selecione o Time do Jogador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>